@@ -75,7 +75,6 @@ import org.elasticsearch.test.ESTestCase;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -89,7 +88,6 @@ import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
@@ -273,7 +271,7 @@ public class SearchExecutionContextTests extends ESTestCase {
             })
         );
         List<String> values = collect("1", searchExecutionContext, new TermQuery(new Term("indexed_field", "first")));
-        assertEquals(org.elasticsearch.common.collect.List.of("escape!"), values);
+        assertEquals(org.elasticsearch.core.List.of("escape!"), values);
         IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> collect("1", searchExecutionContext));
         assertEquals("Cyclic dependency detected while resolving runtime fields: 1 -> 2 -> 3 -> 4 -> 4", iae.getMessage());
     }
@@ -299,7 +297,7 @@ public class SearchExecutionContextTests extends ESTestCase {
             runtimeField("4", leafLookup -> leafLookup.doc().get("5").get(0).toString()),
             runtimeField("5", (leafLookup, docId) -> "cat on doc " + docId)
         );
-        assertEquals(org.elasticsearch.common.collect.List.of("cat on doc 0", "cat on doc 1"), collect("1", searchExecutionContext));
+        assertEquals(org.elasticsearch.core.List.of("cat on doc 0", "cat on doc 1"), collect("1", searchExecutionContext));
     }
 
     public void testFielddataLookupOneFieldManyReferences() throws IOException {
@@ -319,9 +317,9 @@ public class SearchExecutionContextTests extends ESTestCase {
             expected.append(i);
         }
         assertEquals(
-            org.elasticsearch.common.collect.List.of(expected.toString(), expected.toString()),
+            org.elasticsearch.core.List.of(expected.toString(), expected.toString()),
             collect("root", createSearchExecutionContext("uuid", null,
-                createMappingLookup(org.elasticsearch.common.collect.List.of(), fields), org.elasticsearch.common.collect.Map.of()))
+                createMappingLookup(org.elasticsearch.core.List.of(), fields), org.elasticsearch.core.Map.of()))
         );
     }
 
@@ -340,15 +338,16 @@ public class SearchExecutionContextTests extends ESTestCase {
          * Modifying them would cause all kinds of problems if two
          * shards are parsed on the same node.
          */
-        Map<String, Object> runtimeMappings = org.elasticsearch.common.collect.Map.ofEntries(
-            org.elasticsearch.common.collect.Map.entry("cat", org.elasticsearch.common.collect.Map.of("type", "keyword")),
-            org.elasticsearch.common.collect.Map.entry("dog", org.elasticsearch.common.collect.Map.of("type", "long"))
+        Map<String, Object> runtimeMappings = org.elasticsearch.core.Map.ofEntries(
+            org.elasticsearch.core.Map.entry("cat", org.elasticsearch.core.Map.of("type", "keyword")),
+            org.elasticsearch.core.Map.entry("dog", org.elasticsearch.core.Map.of("type", "long"))
         );
         SearchExecutionContext context = createSearchExecutionContext(
             "uuid",
             null,
-            createMappingLookup(org.elasticsearch.common.collect.List.of(
-                new MockFieldMapper.FakeFieldType("pig"), new MockFieldMapper.FakeFieldType("cat")), Collections.emptyList()),
+            createMappingLookup(org.elasticsearch.core.List.of(
+                new MockFieldMapper.FakeFieldType("pig"), new MockFieldMapper.FakeFieldType("cat")),
+                Collections.singletonList(new TestRuntimeField("runtime", "long"))),
             runtimeMappings);
         assertTrue(context.isFieldMapped("cat"));
         assertThat(context.getFieldType("cat"), instanceOf(KeywordScriptFieldType.class));
@@ -359,15 +358,7 @@ public class SearchExecutionContextTests extends ESTestCase {
         assertTrue(context.isFieldMapped("pig"));
         assertThat(context.getFieldType("pig"), instanceOf(MockFieldMapper.FakeFieldType.class));
         assertThat(context.getMatchingFieldNames("pig"), equalTo(Collections.singleton("pig")));
-        assertThat(context.getMatchingFieldNames("*"), containsInAnyOrder("cat", "dog", "pig"));
-
-        // test that shadowed fields aren't returned by getMatchingFieldTypes
-        Collection<MappedFieldType> matches = context.getMatchingFieldTypes("ca*");
-        assertThat(matches, hasSize(1));
-        assertThat(matches.iterator().next(), instanceOf(KeywordScriptFieldType.class));
-
-        matches = context.getAllFieldTypes();
-        assertThat(matches, hasSize(3));
+        assertThat(context.getMatchingFieldNames("*"), containsInAnyOrder("cat", "dog", "pig", "runtime"));
     }
 
     public void testSearchRequestRuntimeFieldsWrongFormat() {
@@ -376,7 +367,7 @@ public class SearchExecutionContextTests extends ESTestCase {
         MapperParsingException exception = expectThrows(MapperParsingException.class, () -> createSearchExecutionContext(
             "uuid",
             null,
-            createMappingLookup(org.elasticsearch.common.collect.List.of(
+            createMappingLookup(org.elasticsearch.core.List.of(
                 new MockFieldMapper.FakeFieldType("pig"), new MockFieldMapper.FakeFieldType("cat")), Collections.emptyList()),
             runtimeMappings));
         assertEquals("Expected map for runtime field [field] definition but got a java.util.Arrays$ArrayList", exception.getMessage());
@@ -388,7 +379,7 @@ public class SearchExecutionContextTests extends ESTestCase {
         MapperParsingException exception = expectThrows(MapperParsingException.class, () -> createSearchExecutionContext(
             "uuid",
             null,
-            createMappingLookup(org.elasticsearch.common.collect.List.of(
+            createMappingLookup(org.elasticsearch.core.List.of(
                 new MockFieldMapper.FakeFieldType("pig"), new MockFieldMapper.FakeFieldType("cat")),
                 Collections.emptyList()),
             runtimeMappings));
@@ -396,14 +387,14 @@ public class SearchExecutionContextTests extends ESTestCase {
     }
 
     public static SearchExecutionContext createSearchExecutionContext(String indexUuid, String clusterAlias) {
-        return createSearchExecutionContext(indexUuid, clusterAlias, MappingLookup.EMPTY, org.elasticsearch.common.collect.Map.of());
+        return createSearchExecutionContext(indexUuid, clusterAlias, MappingLookup.EMPTY, org.elasticsearch.core.Map.of());
     }
 
     private static SearchExecutionContext createSearchExecutionContext(RuntimeField... fieldTypes) {
         return createSearchExecutionContext(
             "uuid",
             null,
-            createMappingLookup(Collections.emptyList(), org.elasticsearch.common.collect.List.of(fieldTypes)),
+            createMappingLookup(Collections.emptyList(), org.elasticsearch.core.List.of(fieldTypes)),
             Collections.emptyMap()
         );
     }
@@ -480,7 +471,7 @@ public class SearchExecutionContextTests extends ESTestCase {
     }
 
     private static RuntimeField runtimeField(String name, BiFunction<LeafSearchLookup, Integer, String> runtimeDocValues) {
-        return new TestRuntimeField(name, null) {
+        TestRuntimeField.TestRuntimeFieldType fieldType = new TestRuntimeField.TestRuntimeFieldType(name, null) {
             @Override
             public IndexFieldData.Builder fielddataBuilder(String fullyQualifiedIndexName,
                                                            Supplier<SearchLookup> searchLookup) {
@@ -569,6 +560,7 @@ public class SearchExecutionContextTests extends ESTestCase {
                 };
             }
         };
+        return new TestRuntimeField(name, null, Collections.singleton(fieldType));
     }
 
     private static List<String> collect(String field, SearchExecutionContext searchExecutionContext) throws IOException {
